--- a/app/views/company/jobs/index.html.erb
+++ b/app/views/company/jobs/index.html.erb
@@ -24,8 +24,10 @@
               <p class="fw-bold text-secondary my-1">Posted On</p>
               <small class=""><%= job.created_at.strftime("%d %b, %Y") %></small>
             </div>
-            <div class="col-lg-6">
+            <div class="col-lg-12">
               <%= link_to 'View job', company_job_path(job), class: 'btn btn-primary mt-3' %>
+              <%= link_to 'Edit job', edit_company_job_path(job), class: 'btn btn-info mt-3' %>
+              <%= link_to 'Delete job', company_job_path(job), data: { turbo_method: :delete, turbo_confirm: 'Are you sure you want to delete this job? This action can not be undo.' }, class: 'btn btn-danger mt-3' %>
               <%= link_to 'View as Job Seeker', job, class: 'btn btn-outline-primary mt-3', target: :_blank %>
             </div>
           </div>
