--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -6,11 +6,31 @@
       <h1 class="text-center mb-4 mt-4">Search Jobs</h1>
       <div class="card-body">
         <%= search_form_for @q, url: jobs_path do |form| %>
-          <div class="input-group mb-5">
-            <%= form.text_field :title_or_job_type_or_company_name_cont, class: 'form-control form-control-lg', "aria-describedby" =>"button-addon2", placeholder: 'Search jobs via title, company or job type' %>
-            <button class="btn btn-outline-secondary" type="submit" id="button-addon2">
-              <i class="bi-search"></i> Search
-            </button>
+          <div class="form-group row">
+            <div class="col-lg-6 mb-4">
+              <%= form.text_field :title_cont, class: 'form-control form-control-lg', placeholder: 'Search jobs via title' %>
+            </div>
+            <div class="col-lg-6 mb-4">
+              <%= form.text_field :company_name_cont, class: 'form-control form-control-lg', placeholder: 'Search jobs via company name' %>
+            </div>
+            <div class="col-lg-6 mb-4">
+              <% if params[:q].present? && params[:q][:job_type_eq].present? %>
+                <%= form.select :job_type_eq, options_for_select(Job::JOB_TYPE, selected: params[:q][:job_type_eq]), { prompt: 'Search job by type' }, {class: 'form-select form-select-lg'} %>
+              <% else %>
+                <%= form.select :job_type_eq, options_for_select(Job::JOB_TYPE), { prompt: 'Search job by type' }, {class: 'form-select form-select-lg'} %>
+              <% end %>
+            </div>
+            <div class="col-lg-6 mb-4">
+              <% if params[:q].present? && params[:q][:job_location_eq].present? %>
+                <%= form.select :job_location_eq, options_for_select(Job::JOB_LOCATION, selected: params[:q][:job_location_eq]), { prompt: 'Search job by location' }, {class: 'form-select form-select-lg'} %>
+              <% else %>
+                <%= form.select :job_location_eq, options_for_select(Job::JOB_LOCATION), { prompt: 'Search job by location' }, {class: 'form-select form-select-lg'} %>
+              <% end %>
+            </div>
+            <div class="col-lg-6 mb-4">
+              <%= link_to 'Reset Search', request.referrer, class: "btn btn-secondary" %>
+              <%= form.submit 'Search', class: "btn btn-primary" %>
+            </div>
           </div>
         <% end %>
       </div>
@@ -18,7 +38,7 @@
   </div>
 
   <div class="row mt-5">
-    <div class="col-lg-8 mx-auto">
+    <div class="col-lg-12">
       <% @jobs.each do |job| %>
         <div class="card shadow mb-3">
           <div class="card-body">
