--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -63,6 +63,13 @@
               <div class="col-lg-6">
                 <%= link_to 'Apply to this job', new_applied_job_path(job_id: job.uuid), class: 'btn btn-primary' %>
                 <%= link_to 'View job', job, class: 'btn btn-primary' %>
+                <% if user_signed_in? && current_user.job_seeker? %>
+                  <% if current_user.jobs.include?(job) %>
+                    <%= link_to 'Remove from Saved Job', "javascript:void(0)", class: "btn btn-danger" %>
+                  <% else %>
+                    <%= link_to 'Save Job', user_saved_jobs_path(job_id: job.uuid), class: "btn btn-outline-danger", data: { turbo_method: :post } %>
+                  <% end %>
+                <% end %>
               </div>
             </div>
           </div>
