--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -16,11 +16,14 @@
           <a class="nav-link active" href="/jobs?type=onsite">Onsite Jobs</a>
         </li>
         <% if user_signed_in? %>
-          <li class="nav-item">
-            <% if current_user.job_seeker? %>
+          <% if current_user.job_seeker? %>
+            <li class="nav-item">
               <%= link_to "My Jobs", my_saved_jobs_user_saved_jobs_path, class: "nav-link active" %>
-            <% end %>
-          </li>
+            </li>
+            <li class="nav-item">
+              <%= link_to "Settings", settings_path, class: "nav-link active" %>
+            </li>
+          <% end %>
           <li class="nav-item">
             <%= link_to 'Sign Out', destroy_user_session_path, data: { turbo_method: :delete, turbo_confirm: 'Are you sure you want to sign out from app?' }, class: "nav-link active" %>
           </li>
