--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -1,14 +1,21 @@
 <div class="row">
-  <div class="col-lg-9">
-    <h2 class="text-primary mt-4 mb-5"><%= @job.title %></h2>
-    <p class="lead text-secondary"><%= @job.description %></p>
-    <p class="lead text-secondary fw-bold">Total Positions: <%= @job.total_positions %></p>
-    <p class="lead text-secondary fw-bold">Who can Apply: <%= @job.applicable_for %></p>
-    <p class="lead text-secondary fw-bold">Salary Range: <%= @job.salary_range %></p>
-    <p class="lead text-secondary fw-bold">Job Type: <%= @job.job_type %></p>
-    <p class="lead text-secondary fw-bold">Location: <%= @job.job_location %></p>
-  </div>
-  <div class="col-lg-3">
-  </div>
+  <% if @job.present? %>
+    <div class="col-lg-9">
+      <h2 class="text-primary mt-4 mb-5"><%= @job.title %></h2>
+      <p class="lead text-secondary"><%= @job.description %></p>
+      <p class="lead text-secondary fw-bold">Total Positions: <%= @job.total_positions %></p>
+      <p class="lead text-secondary fw-bold">Who can Apply: <%= @job.applicable_for %></p>
+      <p class="lead text-secondary fw-bold">Salary Range: <%= @job.salary_range %></p>
+      <p class="lead text-secondary fw-bold">Job Type: <%= @job.job_type %></p>
+      <p class="lead text-secondary fw-bold">Location: <%= @job.job_location %></p>
+    </div>
+    <div class="col-lg-3">
+    </div>
+  <% else %>
+    <div class="text-center">
+      <h1 class="mt-5 mb-5">This job is no longer available</h1>
+      <%= link_to 'Find More Jobs Here', jobs_path, class: 'btn btn-primary' %>
+    </div>
+  <% end %>
 </div>
   
