--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,9 +15,18 @@
     <div class="container">
       <%= render 'shared/flash' %>
       <div class="row">
-        <div class="col-lg-12">
-          <%= yield %>
-        </div>
+        <% if user_signed_in? && current_user.employeer? && !params[:public_view].present? %>
+          <div class="col-lg-3">
+            <%= render 'shared/employeer_sidebar' %>
+          </div>
+          <div class="col-lg-9">
+            <%= yield %>
+          </div>
+        <% else %>
+          <div class="col-lg-12">
+            <%= yield %>
+          </div>
+        <% end %>
       </div>
     </div>
   </body>
