--- a/app/views/companies/show.html.erb
+++ b/app/views/companies/show.html.erb
@@ -25,8 +25,14 @@
               <small class=""><%= job.total_positions %></small>
             </div>
             <div class="col-lg-6 mt-3 mb-2">
-              <%= link_to 'Apply to this job', new_applied_job_path(job_id: job.uuid), class: 'btn btn-primary' %>
-              <%= link_to 'View job', job, class: 'btn btn-primary' %>
+              <% unless user_signed_in? && current_user.employeer? %>
+                <%= link_to 'Apply to this job', new_applied_job_path(job_id: job.uuid), class: 'btn btn-primary' %>
+              <% end %>
+              <% if user_signed_in? && current_user.employeer? %>
+                <%= link_to 'View job', job_path(job, public_view: 'yes'), class: 'btn btn-primary' %>
+              <% else %>
+                <%= link_to 'View job', job, class: 'btn btn-primary' %>
+              <% end %>
               <% if user_signed_in? && current_user.job_seeker? %>
                 <% if current_user.jobs.include?(job) %>
                   <span class="badge text-bg-primary">Saved Job</span>
