--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -3,8 +3,19 @@
     <div class="card shadow">
       <div class="card-body">
         <h2 class="text-center">Sign Up</h2>
-        <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+        <%= form_for(resource, as: resource_name, url: registration_path(resource_name, type: params[:type])) do |f| %>
           <%= render "users/shared/error_messages", resource: resource %>
+
+          <% if params[:type].present? && params[:type] == 'hire' %>
+            <%= f.hidden_field :role, value: 'employeer' %>
+            <div class="form-group mb-3">
+              <%= f.label :company_name %>
+              <%= text_field_tag :company_name, nil, class: "form-control form-control-lg" %>
+            </div>  
+          <% elsif params[:type].present? && params[:type] == 'seeker' %>
+            <%= f.hidden_field :role, value: 'job_seeker' %>
+          <% end %>
+
           <div class="form-group mb-3">
             <%= f.label :first_name %>
             <%= f.text_field :first_name, class: "form-control form-control-lg" %>
