--- a/app/views/notification_mailer/job_application_receive_to_employeer.html.erb
+++ b/app/views/notification_mailer/job_application_receive_to_employeer.html.erb
@@ -1,4 +1,4 @@
-<h1>Hello <%= @employeer.name %></h1>
+<h1>Hello <%= @employer.name %></h1>
 
 <p>
   A new application has been received by <strong><%= @user.name %></strong> on a job titled as: <strong><%= @job.title %></strong> posted by you.
