--- a/app/views/notification_mailer/job_applied_by_job_seeker.html.erb
+++ b/app/views/notification_mailer/job_applied_by_job_seeker.html.erb
@@ -1,7 +1,7 @@
 <h1>Hello <%= @user.name %></h1>
 
 <p>
-  Thanks for submitting your application for the job titled as: <strong><%= @job.title %></strong>. Your details has been sent to the employeer and they will get back to you as soon as they review your application.
+  Thanks for submitting your application for the job titled as: <strong><%= @job.title %></strong>. Your details has been sent to the employer and they will get back to you as soon as they review your application.
 </p>
 
 <p>
